--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/drawer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.activity.SampleActivity">
+    android:orientation="vertical">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RelativeLayout
+            android:id="@+id/rl_top_nav"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/positive_50dp">
+
+            <ImageButton
+                android:id="@+id/btn_img_hamburger"
+                android:layout_width="@dimen/positive_30dp"
+                android:layout_height="@dimen/positive_30dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/bg_press_states"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_hamburger_menu"
+                android:layout_marginStart="@dimen/positive_16dp"
+                android:layout_marginLeft="@dimen/positive_16dp"/>
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:layout_alignParentBottom="true"
+                android:background="@color/colorDivider"/>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:id="@+id/rl_bottom_nav"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/positive_50dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/bottom_nav_background"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:paddingEnd="@dimen/positive_16dp"
+            android:paddingLeft="@dimen/positive_16dp"
+            android:paddingRight="@dimen/positive_16dp"
+            android:paddingStart="@dimen/positive_16dp">
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:src="@drawable/bottom_nav_icon" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:src="@drawable/bottom_nav_icon" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:src="@drawable/bottom_nav_icon" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:src="@drawable/bottom_nav_icon" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:src="@drawable/bottom_nav_icon" />
+
+        </LinearLayout>
+
+
+        <FrameLayout
+            android:id="@+id/fl_main_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/rl_bottom_nav"
+            android:layout_below="@+id/rl_top_nav" />
+    </RelativeLayout>
+
+
+    <android.support.design.widget.NavigationView
+        android:id="@+id/navView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/drawer_background"
+        >
+
+        <ListView
+            android:id="@+id/lv_drawer_nav"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:dividerHeight="0dp"
+            />
+    </android.support.design.widget.NavigationView>
+
+</android.support.v4.widget.DrawerLayout>
