--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,8 +6,9 @@
     <color name="colorBackground">#fff</color>
     <color name="colorDivider">#b4b4b4</color>
 
-    <!--common-->
+    <!--Common-->
     <color name="color_white">#fff</color>
+    <color name="divider_color">#acacac</color>
 
 
     <!--drawer navigation-->
