--- a/app/src/main/res/layout/drawer_nav_footer.xml
+++ b/app/src/main/res/layout/drawer_nav_footer.xml
@@ -9,5 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/img_drawer_nav_footer"/>
+    <TextView
+        android:textColor="@color/colorBackground"
+        android:layout_marginLeft="@dimen/positive_30dp"
+        android:layout_marginRight="@dimen/positive_30dp"
+        android:layout_marginBottom="@dimen/positive_10dp"
+        android:textSize="@dimen/text_size_8sp"
+        android:layout_gravity="center"
+        android:text="@string/drawer_nav_footer_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
