--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,8 @@
     <!--Common-->
     <color name="color_white">#fff</color>
     <color name="divider_color">#acacac</color>
+    <color name="text_bottom_nav_inactive">#D8D8D8</color>
+    <color name="text_bottom_nav_activated">#EE8247</color>
 
 
     <!--drawer navigation-->
