--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,6 @@
 
     <!--intro screen-->
     <color name="indicator_bg_color">#ee8247</color>
+    <color name="button_color">#68BFA2</color>
+    <color name="button_press_color">#FF84BFAC</color>
 </resources>
