--- a/app/src/main/res/layout/activity_term_use.xml
+++ b/app/src/main/res/layout/activity_term_use.xml
@@ -3,18 +3,32 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout
+    <RelativeLayout
+        android:background="@color/color_white"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/positive_50dp"
-        android:gravity="center">
-
+        android:layout_height="@dimen/positive_50dp">
+        <ImageView
+            android:visibility="gone"
+            android:padding="@dimen/positive_8dp"
+            android:layout_centerInParent="true"
+            android:id="@+id/imgClose"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:src="@drawable/ic_close_webview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/tvTitle"
+            android:layout_centerVertical="true"
+            android:gravity="center"
+            android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/header"
-            android:text="Terms Of Use"/>
+            android:textColor="@color/colorPrimary"
+            android:textSize="@dimen/text_size_18sp"
+            android:text="@string/terms_of_use"/>
 
-    </LinearLayout>
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
@@ -33,7 +47,8 @@
             android:padding="@dimen/positive_16dp"/>
 
         <ProgressBar
-            style="?android:attr/progressBarStyleSmall"
+            android:indeterminateDrawable="@drawable/progress_style"
+            style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/progressBar"
@@ -41,6 +56,8 @@
     </FrameLayout>
     
     <LinearLayout
+        android:id="@+id/ll"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="@dimen/positive_50dp"
         android:gravity="center">
