--- a/app/src/main/res/layout/fragment_news.xml
+++ b/app/src/main/res/layout/fragment_news.xml
@@ -11,9 +11,12 @@
         android:padding="@dimen/positive_16dp"/>
 
     <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_gravity="center" />
+        android:layout_marginTop="-7dp"
+        android:padding="0dp"
+        android:id="@+id/progressBar2"
+        android:max="100"
+        android:layout_gravity="start|top"/>
 </FrameLayout>
