--- a/app/src/main/res/layout/activity_term_use.xml
+++ b/app/src/main/res/layout/activity_term_use.xml
@@ -30,25 +30,28 @@
             android:text="@string/terms_of_use"
             android:textColor="@color/colorPrimary"
             android:textSize="@dimen/text_size_18sp" />
-
     </RelativeLayout>
 
-    <View
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:background="@color/divider_color" />
-
-    <ProgressBar
-        android:id="@+id/progressBar2"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start|top"
-        android:layout_marginBottom="-10dp"
-        android:layout_marginTop="-7dp"
-        android:max="100"
-        android:padding="0dp"
-        android:progressDrawable="@drawable/progress_horizontal" />
+        android:layout_height="wrap_content">
+        <ProgressBar
+            android:id="@+id/progressBar2"
+            style="?android:attr/progressBarStyleHorizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|top"
+            android:layout_marginBottom="-10dp"
+            android:layout_marginTop="-10dp"
+            android:max="100"
+            android:padding="0dp"
+            android:progressDrawable="@drawable/progress_horizontal" />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentTop="true"
+            android:background="@color/colorDivider" />
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
