--- a/app/src/main/res/layout-land/fragment_mypage.xml
+++ b/app/src/main/res/layout-land/fragment_mypage.xml
@@ -1,13 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/rectangle_4"
+    android:background="@drawable/img_blue_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <ImageView
-        android:layout_centerInParent="true"
-        android:src="@drawable/card_badge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+    <LinearLayout
+        android:layout_weight="3"
+        android:layout_marginLeft="@dimen/positive_35dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:src="@drawable/ic_anpan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+        <LinearLayout
+            android:layout_marginLeft="@dimen/positive_30dp"
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textColor="#ffffff"
+                android:textSize="@dimen/text_size_22sp"
+                android:layout_gravity="center"
+                android:text="ID:000000000"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textColor="#ffffff"
+                android:textStyle="bold"
+                android:textSize="@dimen/text_size_26sp"
+                android:layout_gravity="center"
+                android:text="獲得バッジ"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
