--- a/app/src/main/res/layout-land/fragment_mypage.xml
+++ b/app/src/main/res/layout-land/fragment_mypage.xml
@@ -2,15 +2,18 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:background="@drawable/img_blue_background"
+    android:background="@drawable/img_orange_background"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:id="@+id/ll_mypage_bgland"
+    android:tag="mypage_landscape">
     <LinearLayout
         android:layout_weight="3"
         android:layout_marginLeft="@dimen/positive_35dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <ImageView
+            android:id="@+id/img_user_icon"
             android:layout_gravity="center"
             android:layout_weight="2"
             android:src="@drawable/ic_anpan"
@@ -24,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
+                android:id="@+id/tv_user_id"
                 android:textColor="#ffffff"
                 android:textSize="@dimen/text_size_22sp"
                 android:layout_gravity="center"
@@ -31,9 +35,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <TextView
+                android:id="@+id/tv_user_name"
                 android:textColor="#ffffff"
                 android:textStyle="bold"
-                android:textSize="@dimen/text_size_26sp"
+                android:textSize="@dimen/text_size_28sp"
                 android:layout_gravity="center"
                 android:text="獲得バッジ"
                 android:layout_width="match_parent"
