--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
+            android:id="@+id/img_user_icon"
             android:layout_centerInParent="true"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/avator_none"
@@ -22,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp">
         <TextView
+            android:id="@+id/tv_user_id"
             android:textSize="@dimen/text_size_16sp"
             android:textColor="@color/colorPrimary"
             android:layout_marginTop="@dimen/positive_10dp"
@@ -30,8 +32,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
+            android:id="@+id/tv_user_name"
             android:textStyle="bold"
-            android:textSize="@dimen/text_size_20sp"
+            android:textSize="@dimen/text_size_28sp"
             android:layout_marginTop="@dimen/positive_10dp"
             android:text="やまだ たろう"
             android:layout_gravity="center"
