--- a/app/src/main/res/layout/dialog_coupon.xml
+++ b/app/src/main/res/layout/dialog_coupon.xml
@@ -22,11 +22,12 @@
             android:paddingBottom="@dimen/positive_60dp"
             android:layout_height="wrap_content">
             <ImageView
+                android:scaleType="fitXY"
                 android:id="@+id/imgCoupon"
                 android:layout_centerInParent="true"
                 android:src="@drawable/bitmap"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_width="@dimen/positive_180dp"
+                android:layout_height="@dimen/positive_180dp" />
         </RelativeLayout>
         <Button
             android:id="@+id/btnOk"
