--- a/app/src/main/res/layout/dialog_coupon.xml
+++ b/app/src/main/res/layout/dialog_coupon.xml
@@ -1,53 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:background="@null"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@null"
+    android:orientation="vertical">
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:background="@color/color_white"
-        android:layout_margin="25dp"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/positive_30dp"
+        android:background="@color/color_white"
+        android:orientation="vertical">
+
         <RelativeLayout
-            android:orientation="vertical"
-            android:layout_marginTop="@dimen/positive_40dp"
+            android:id="@+id/rl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/positive_20dp"
             android:layout_marginRight="@dimen/positive_20dp"
+            android:layout_marginTop="@dimen/positive_40dp"
             android:background="@color/colorDivider"
-            android:layout_width="match_parent"
-            android:paddingTop="@dimen/positive_60dp"
-            android:paddingBottom="@dimen/positive_60dp"
-            android:layout_height="wrap_content">
+            android:orientation="vertical">
+
             <ImageView
-                android:scaleType="fitXY"
+                android:padding="@dimen/positive_20dp"
+                android:scaleType="centerInside"
                 android:id="@+id/imgCoupon"
+                android:layout_width="@dimen/positive_250dp"
+                android:layout_height="@dimen/positive_250dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/bitmap"
-                android:layout_width="@dimen/positive_180dp"
-                android:layout_height="@dimen/positive_180dp" />
+                android:src="@drawable/ahihi" />
         </RelativeLayout>
+
         <Button
+            android:layout_below="@id/rl"
             android:id="@+id/btnOk"
-            android:text="@string/button_ok"
-            android:textSize="@dimen/text_size_18sp"
-            android:textColor="@color/color_white"
-            android:background="@drawable/button_term_use"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/positive_60dp"
+            android:layout_marginBottom="@dimen/positive_30dp"
             android:layout_marginLeft="@dimen/positive_20dp"
             android:layout_marginRight="@dimen/positive_20dp"
             android:layout_marginTop="@dimen/positive_20dp"
-            android:layout_marginBottom="30dp"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/positive_60dp" />
+            android:background="@drawable/button_term_use"
+            android:text="@string/button_ok"
+            android:textColor="@color/color_white"
+            android:textSize="@dimen/text_size_18sp" />
+    </RelativeLayout>
 
-    </LinearLayout>
     <ImageView
         android:id="@+id/imgClose"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/button_close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:layout_alignParentRight="true"
+        android:src="@drawable/button_close" />
 </RelativeLayout>
