--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -3,13 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="@dimen/positive_16dp"
-    android:background="@color/colorPrimary"
+    android:background="@drawable/tutorial_background"
     android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/iphone_editable" />
 
     <LinearLayout
         android:layout_width="match_parent"
