--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="0.2"
-        android:background="@color/colorPrimary">
+        android:background="@drawable/mypage_background">
 
         <ImageView
             android:id="@+id/img_user_icon"
