--- a/app/src/main/res/layout-land/fragment_mypage.xml
+++ b/app/src/main/res/layout-land/fragment_mypage.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:id="@+id/tv_user_id"
                 android:textColor="#ffffff"
-                android:textSize="@dimen/text_size_22sp"
+                android:textSize="@dimen/text_size_16sp"
                 android:layout_gravity="center"
                 android:text="ID:000000000"
                 android:layout_width="match_parent"
@@ -39,9 +39,10 @@
                 android:id="@+id/tv_user_name"
                 android:textColor="#ffffff"
                 android:textStyle="bold"
+                android:paddingTop="@dimen/positive_2dp"
                 android:textSize="@dimen/text_size_28sp"
                 android:layout_gravity="center"
-                android:text="獲得バッジ"
+                android:text="やまだ だろう"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
             <ImageView
