--- a/app/src/main/res/layout/fragment_mypage.xml
+++ b/app/src/main/res/layout/fragment_mypage.xml
@@ -8,7 +8,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.2"
+        android:layout_weight="0.15"
         android:background="@drawable/mypage_background">
 
         <ImageView
@@ -23,7 +23,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.85"
         android:orientation="vertical">
 
         <TextView
@@ -31,19 +31,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/positive_10dp"
+            android:layout_marginTop="@dimen/positive_16dp"
             android:text="ID:0000000000"
             android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/text_size_16sp" />
+            android:textSize="@dimen/text_size_14sp" />
 
         <TextView
             android:id="@+id/tv_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/positive_10dp"
+            android:layout_marginTop="@dimen/positive_6dp"
             android:text="やまだ たろう"
-            android:textSize="@dimen/text_size_28sp"
+            android:textSize="@dimen/text_size_24sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
@@ -52,15 +52,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="@dimen/positive_10dp"
+            android:layout_marginTop="@dimen/positive_8dp"
             android:src="@drawable/img_nickname"
             android:visibility="gone" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
-            android:layout_marginBottom="@dimen/positive_20dp"
-            android:layout_marginTop="@dimen/positive_20dp"
+            android:layout_marginBottom="@dimen/positive_16dp"
+            android:layout_marginTop="@dimen/positive_16dp"
             android:background="@color/colorDivider" />
 
         <Button
@@ -74,7 +74,7 @@
             android:textColor="@color/color_white" />
 
         <LinearLayout
-            android:id="@+id/ll_bage"
+            android:id="@+id/ll_badge"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -86,12 +86,14 @@
                 android:layout_marginStart="@dimen/positive_20dp"
                 android:text="@string/badge"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/text_size_16sp" />
+                android:textSize="@dimen/text_size_14sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/positive_20dp"
+                android:layout_marginTop="@dimen/positive_12dp"
+                android:layout_marginRight="@dimen/positive_20dp"
+                android:layout_marginLeft="@dimen/positive_20dp"
                 android:orientation="horizontal"
                 android:visibility="visible"
                 android:gravity="center">
@@ -100,49 +102,49 @@
                 android:id="@+id/badge1"
                 android:layout_weight="1"
                 android:src="@drawable/badge_1"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"/>
             <ImageView
                 android:id="@+id/badge2"
                 android:layout_weight="1"
                 android:src="@drawable/badge_2"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"/>
             <ImageView
                 android:id="@+id/badge3"
                 android:layout_weight="1"
                 android:src="@drawable/badge_3"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"/>
             <ImageView
                 android:id="@+id/badge4"
                 android:layout_weight="1"
                 android:src="@drawable/badge_4"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"/>
             <ImageView
                 android:id="@+id/badge5"
                 android:layout_weight="1"
                 android:src="@drawable/badge_5"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"/>
             <ImageView
                 android:id="@+id/badge6"
                 android:layout_weight="1"
                 android:src="@drawable/badge_6"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"/>
             <ImageView
                 android:id="@+id/badge7"
                 android:layout_weight="1"
                 android:src="@drawable/badge_7"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"/>
             </LinearLayout>
