--- a/app/src/main/res/layout/dialog_coupon.xml
+++ b/app/src/main/res/layout/dialog_coupon.xml
@@ -29,7 +29,7 @@
                 android:layout_width="@dimen/positive_250dp"
                 android:layout_height="@dimen/positive_250dp"
                 android:layout_centerInParent="true"
-                android:src="@drawable/ahihi" />
+                android:src="@drawable/bitmap" />
         </RelativeLayout>
 
         <Button
