--- a/app/src/main/res/layout-land/fragment_mypage.xml
+++ b/app/src/main/res/layout-land/fragment_mypage.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/tv_user_name"
                 android:textColor="#ffffff"
                 android:textStyle="bold"
-                android:paddingTop="@dimen/positive_2dp"
+                android:layout_marginTop="@dimen/positive_6dp"
                 android:textSize="@dimen/text_size_28sp"
                 android:layout_gravity="center"
                 android:text="やまだ だろう"
@@ -50,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/img_nickname"
+                android:layout_marginTop="@dimen/positive_6dp"
                 android:visibility="gone" />
         </LinearLayout>
     </LinearLayout>
